# pretty-pdf

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  dev-requirements.txt  pyproject.toml  requirements.txt
prettypdf/: main.py  test_main.py
