[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"


[project]
name = "prettypdf"
version = "0.0.1"
dependencies = [
    "typer",
    "rich"
]


[project.optional-dependencies]
dev = [
    "pytest",
    "pre-commit",
    "mypy",
]

[project.scripts]
prettypdf = "prettypdf.main:app"
